--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,17 @@
-Name: Deploy to AWS Lambda
+name: Deploy to AWS Lambda
 
 on:
   push:
     branches:
     - main
-    
+
+jobs:
+  deploy_to_Lambda:
+    name: deploy to staging
+    runs-on: ubuntu-latest
+
+steps:
+    - uses: actions/checkout@v4
+    - name: list folder
+      run: ls -l
+     
